feat!: move controller singleton creation to class registration and add `@Singleton` annotations (#377)
Refs: #366